--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Hello git</title>
     
 </head>
 <body>
 
     <p>Hello there</p>
-    
+    <p>CS445</p>
 </body>
 </html>
